--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
   <meta name="description" content="eGold (EGLD) Staking | Stake EGLD | RisaSoft" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@risasoftstaking" />
-  <meta name="twitter:creator" content="@risasoftstaking" />
+  <meta name="twitter:site" content="@risa_staking" />
+  <meta name="twitter:creator" content="@risa_staking" />
   <meta name="twitter:title" content="Risa Staking" />
   <meta name="twitter:description" content="eGold (EGLD) Staking | Stake EGLD | RisaSoft" />
   <meta name="twitter:image" content="social.png" />
